# floor-ceiling-perspective-simulation

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: emscripten.yml
.github/workflows/: emscripten.yml
includes/base/: common.hpp  defs.hpp  structs.hpp
includes/system/: draw.hpp  init.hpp  texture.hpp
src/: main.cpp
src/system/: draw.cpp  init.cpp  texture.cpp
